<?xml version="1.0" encoding="utf-8"?>
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory
            android:title="@string/basic_settings"
            android:persistent="false">
            <PreferenceScreen
                android:title="@string/automatic_tagging"
                android:summary="@string/automatic_tagging_summary"
                >
                <EditTextPreference
                    android:name="tag_rocket"
                    android:title="Rocket"
                    android:defaultValue="rocket"
                    android:key="tag_rocket"></EditTextPreference>
                <EditTextPreference
                    android:name="tag_gift"
                    android:title="Gift"
                    android:defaultValue="gift"
                    android:key="tag_gift"></EditTextPreference>
                <EditTextPreference
                    android:name="tag_tv"
                    android:title="TV"
                    android:defaultValue="tv"
                    android:key="tag_tv"></EditTextPreference>
                <EditTextPreference
                    android:name="tag_bell"
                    android:title="Bell"
                    android:defaultValue="bell"
                    android:key="tag_bell"></EditTextPreference>
                <EditTextPreference
                    android:name="tag_game"
                    android:title="Game"
                    android:defaultValue="game"
                    android:key="tag_game"></EditTextPreference>
                <EditTextPreference
                    android:name="tag_star"
                    android:title="Star"
                    android:defaultValue="star"
                    android:key="tag_star"></EditTextPreference>
                <EditTextPreference
                    android:name="tag_magnet"
                    android:title="Magnet"
                    android:defaultValue="magnet"
                    android:key="tag_magnet">
                </EditTextPreference>
            </PreferenceScreen>
            <CheckBoxPreference
                android:title="@string/match_aspect"
                android:defaultValue="true"
                android:key="match_aspect"
                android:summary="@string/match_aspect_summary"
                ></CheckBoxPreference>
            <CheckBoxPreference
                android:title="@string/bug_rotate"
                android:defaultValue="false"
                android:key="bug_rotate"
                android:summary="@string/bug_rotate_summary"
                ></CheckBoxPreference>
            <EditTextPreference
                android:name="storage_folder"
                android:title="@string/storage_folder"
                android:defaultValue="DocScan"
                android:key="storage_folder"
                android:summary="@string/storage_folder_summary">
            </EditTextPreference>
        </PreferenceCategory>
</PreferenceScreen>